--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <header class="cabec">
 
-        <a href="../index.html"><img src="../img/ICON.png" alt="" class="logo"></a>
+        <a href="../index.html"><img src="img/ICON.png" alt="" class="logo"></a>
 
 
         <button class="btnTheme"><i class="fa-solid fa-sun"></i></button>
